objects/Booking_Package_Signatories__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Package__c</fullName>
        <label>Booking Package</label>
        <referenceTo>Booking_Package__c</referenceTo>
        <relationshipLabel>Booking Package Signatories</relationshipLabel>
        <relationshipName>Booking_Package_Signatories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Hours__c</fullName>
        <label>Time (Hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Booking Package Signatories</label>
    <nameField>
        <label>Signatory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Package Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>